--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Post_Comment_Spring_Project
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa_one_to_many_demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa_one_to_many_demo
 spring.datasource.username=Person2
 spring.datasource.password=12345
 # Hibernate # The SQL dialect makes Hibernate generate better SQL for the chosen database
